--- a/styles.css
+++ b/styles.css
@@ -2,21 +2,34 @@
   box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+  display: flex;
+}
+
 #grid {
-  margin: 1em auto;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   aspect-ratio: 1 / 1;
   width: 800px;
+  background-color: red;
+  padding: 1em;
 }
 
 .square {
   aspect-ratio: 1 / 1;
   border: 1px solid rgba(0, 0, 0, 0.05);
   flex-shrink: 0;
+  background-color: white;
 }
 
-button[id="changeGrid"] {
+#options {
+  background-color: cornflowerblue;
+  padding: 1em;
+}
+
+#options button {
   display: block;
-  margin: 1em auto;
+  margin-bottom: 0.5em;
 }
