--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *, *::before, *::after {
   box-sizing: border-box;
+}
+
+html {
+  font-family: 'Inter Tight', sans-serif;
+  font-size: 18px;
 }
 
 body {
@@ -31,7 +38,12 @@ body {
   padding: 1em;
 }
 
-#options > * {
+#colorPicker,
+button {
   display: block;
   margin-bottom: 0.5em;
+}
+
+button {
+  font-family: inherit;
 }
