--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,12 @@
 }
 
 html {
-  font-family: 'Inter Tight', sans-serif;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 body {
+  font-family: 'Inter Tight', sans-serif;
+  font-weight: bold;
   margin: 0;
   display: flex;
 }
@@ -38,12 +39,28 @@ body {
   padding: 1em;
 }
 
-#colorPicker,
 button {
   display: block;
-  margin-bottom: 0.5em;
+  margin: 0.5em 0;
+  font-size: inherit;
+  font-family: inherit;
+  font-weight: inherit;
+  padding: 0.80em;
 }
 
-button {
-  font-family: inherit;
+#modeColorPicker,
+#modeRandomColor {
+  color: white;
+  text-shadow: 0px 0px 3px black;
+  background-color: black;
+}
+
+#modeRandomColor {
+  background: linear-gradient(90deg,
+  rgba(255,0,0,1) 0%,
+  rgba(255,255,0,1) 20%,
+  rgba(0,255,0,1) 40%,
+  rgba(0,255,255,1) 60%,
+  rgba(0,0,255,1) 80%,
+  rgba(255,0,255,1) 100%);
 }
