--- a/styles.css
+++ b/styles.css
@@ -46,14 +46,24 @@ button {
   padding: 0.80em;
 }
 
-#modeColorPicker,
-#modeRandomColor {
-  color: white;
-  text-shadow: 0px 0px 3px black;
-  background-color: black;
+#colorPaletteContainer {
+  background-color: #fff;
+  width: max-content;
+  padding: 16px;
+  display: grid;
+  grid-template-columns: repeat(5, 25px);
+  gap: 8px;
+}
+
+.paletteColor {
+  aspect-ratio: 1 / 1;
+  width: 25px;
+  font-size: 0px;
 }
 
 #modeRandomColor {
+  color: white;
+  text-shadow: 0px 0px 3px black;
   background: linear-gradient(90deg,
   rgba(255,0,0,1) 0%,
   rgba(255,255,0,1) 20%,
