--- a/styles.css
+++ b/styles.css
@@ -6,52 +6,69 @@
 
 html {
   font-size: 16px;
+  height: 100%;
 }
 
 body {
+  margin: 0;
+  height: 100%;
   font-family: 'Inter Tight', sans-serif;
   font-weight: bold;
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+#header {
+  font-size: 4em;
+}
+
+#header,
+#footer {
+  border: 1px solid black; /* Only for debugging */
+  text-align: center;
+}
+
+#main {
+  flex: 1;
   display: flex;
 }
 
 #grid {
-  margin: 0 auto;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  aspect-ratio: 1 / 1;
+  width: 700px;
+  background-color: rgb(0, 0, 0);
+  border: 5px solid black;
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
-  aspect-ratio: 1 / 1;
-  width: 800px;
-  background-color: rgb(0, 0, 0);
   cursor: crosshair;
 }
 
 .square {
   aspect-ratio: 1 / 1;
-  flex-shrink: 0;
+  /* flex-shrink: 0; */
 }
 
 #options {
-  background-color: rgb(50, 50, 50);
-  color: white;
+  border: 1px solid black; /* Only for debugging */
+  width: 250px;
   padding: 1em;
-}
-
-button {
-  display: block;
-  margin: 0.5em 0;
-  font-size: inherit;
-  font-family: inherit;
-  font-weight: inherit;
-  padding: 0.80em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #colorPaletteContainer {
-  background-color: #fff;
-  width: max-content;
-  padding: 16px;
+  border: 1px solid black; /* Only for debugging */
+  padding: 1em;
   display: grid;
-  grid-template-columns: repeat(5, 25px);
+  grid-template-columns: repeat(5, 1fr);
   gap: 8px;
 }
 
@@ -61,18 +78,8 @@ button {
   font-size: 0px;
 }
 
-#modeRandomColor {
-  color: white;
-  text-shadow: 0px 0px 3px black;
-  background: linear-gradient(90deg,
-  rgba(255,0,0,1) 0%,
-  rgba(255,255,0,1) 20%,
-  rgba(0,255,0,1) 40%,
-  rgba(0,255,255,1) 60%,
-  rgba(0,0,255,1) 80%,
-  rgba(255,0,255,1) 100%);
-}
-
-output {
-  display: block;
+button {
+  font-size: inherit;
+  font-family: inherit;
+  font-weight: inherit;
 }
