--- a/styles.css
+++ b/styles.css
@@ -13,19 +13,20 @@ body {
   margin: 0;
   height: 100%;
   font-family: 'Inter Tight', sans-serif;
-  font-weight: bold;
   display: flex;
   flex-direction: column;
 }
 
 #header {
   font-size: 4em;
+  font-weight: bold;
 }
 
 #header,
 #footer {
   border: 1px solid black; /* Only for debugging */
   text-align: center;
+  padding: 1rem 0;
 }
 
 #main {
@@ -37,12 +38,10 @@ body {
   position: absolute;
   left: 0;
   right: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto;
+  margin: 0 auto;
+  align-self: center;
   aspect-ratio: 1 / 1;
-  width: 700px;
-  background-color: rgb(0, 0, 0);
+  width: 650px;
   border: 5px solid black;
   display: flex;
   flex-wrap: wrap;
@@ -50,19 +49,44 @@ body {
   cursor: crosshair;
 }
 
-.square {
-  aspect-ratio: 1 / 1;
-  /* flex-shrink: 0; */
-}
-
 #options {
   border: 1px solid black; /* Only for debugging */
-  width: 250px;
+  width: 300px;
   padding: 1em;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
+/*----- Color Picker -----*/
+
+#colorPicker {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 100px;
+  height: 100px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  margin-bottom: 16px;
+  transition: transform 0.1s ease-in-out;
+}
+#colorPicker::-webkit-color-swatch {
+  border: none;
+  border-radius: 100%;
+  box-shadow: 0 1px 3px 0px rgb(0, 0, 0, 0.5);
+}
+#colorPicker::-moz-color-swatch {
+  border: none;
+  border-radius: 100%;
+  box-shadow: 0 1px 3px 0px rgb(0, 0, 0, 0.5);
+}
+#colorPicker:hover {
+  transform: scale(1.05);
+}
+
+/*----- Color Palette -----*/
 
 #colorPaletteContainer {
   border: 1px solid black; /* Only for debugging */
@@ -70,6 +94,9 @@ body {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 8px;
+  max-height: 315px;
+  overflow-y: auto;
+  /* overflow-y: scroll; */
 }
 
 .paletteColor {
@@ -78,8 +105,15 @@ body {
   font-size: 0px;
 }
 
+/*///--------------------\\\*/
+
 button {
   font-size: inherit;
   font-family: inherit;
   font-weight: inherit;
+  min-width: 250px;
+}
+
+input[type="range"] {
+  min-width: 250px;
 }
