--- a/styles.css
+++ b/styles.css
@@ -49,10 +49,18 @@ body {
   cursor: crosshair;
 }
 
-#options {
+#menu {
   border: 1px solid black; /* Only for debugging */
   width: 300px;
   padding: 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+#colorPickerContainer,
+#buttonsContainer {
+  /* border: 1px solid rgb(0, 0, 0, 0.25); */ /* Only for debugging */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -89,20 +97,36 @@ body {
 /*----- Color Palette -----*/
 
 #colorPaletteContainer {
-  border: 1px solid black; /* Only for debugging */
+  min-width: max-content;
   padding: 1em;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 8px;
-  max-height: 315px;
+  /* max-height: 315px; */
+  max-height: 224px;
   overflow-y: auto;
-  /* overflow-y: scroll; */
+  border-top: 1px solid rgba(0, 0, 0, 0.25);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+}
+#colorPaletteContainer::-webkit-scrollbar {
+  width: 5px;
+  background: rgb(200, 200, 200);
+}
+#colorPaletteContainer::-webkit-scrollbar-thumb {
+  background: rgb(100, 100, 100);
 }
 
 .paletteColor {
-  aspect-ratio: 1 / 1;
   width: 25px;
+  height: 25px;
   font-size: 0px;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  box-shadow: 0 1px 3px 0px rgb(0, 0, 0, 0.25);
+  transition: transform 0.1s ease-out, box-shadow 0.1s ease-out;
+}
+.paletteColor:hover {
+  transform: scale(1.1);
+  box-shadow: none;
 }
 
 /*///--------------------\\\*/
@@ -112,6 +136,7 @@ button {
   font-family: inherit;
   font-weight: inherit;
   min-width: 250px;
+  margin-bottom: 1rem;
 }
 
 input[type="range"] {
