--- a/styles.css
+++ b/styles.css
@@ -58,9 +58,9 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+
 #colorPickerContainer,
 #buttonsContainer {
-  /* border: 1px solid rgb(0, 0, 0, 0.25); */ /* Only for debugging */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -128,7 +128,7 @@ body {
   box-shadow: none;
 }
 
-/*///--------------------\\\*/
+/*----- Buttons and inputs -----*/
 
 button {
   font-size: inherit;
