--- a/styles.css
+++ b/styles.css
@@ -20,13 +20,17 @@ body {
 #header {
   font-size: 4em;
   font-weight: bold;
+  border-bottom: 2px solid black;
 }
 
 #header,
 #footer {
-  border: 1px solid black; /* Only for debugging */
   text-align: center;
   padding: 1rem 0;
+}
+
+#footer {
+  border-top: 2px solid black;
 }
 
 #main {
@@ -50,9 +54,9 @@ body {
 }
 
 #menu {
-  border: 1px solid black; /* Only for debugging */
   width: 300px;
   padding: 1em;
+  border-right: 2px solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
