--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,213 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*, *::before, *::after {
-  box-sizing: border-box;
-}
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 html {
-  font-size: 16px;
-  height: 100%;
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
 }
 
 body {
   margin: 0;
-  height: 100%;
+}
+
+main {
+  display: block;
+}
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+hr {
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
+}
+
+pre {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+a {
+  background-color: transparent;
+}
+
+abbr[title] {
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
+}
+
+b,
+strong {
+  font-weight: bolder;
+}
+
+code,
+kbd,
+samp {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+small {
+  font-size: 80%;
+}
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+img {
+  border-style: none;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
+}
+
+button,
+input { /* 1 */
+  overflow: visible;
+}
+
+button,
+select { /* 1 */
+  text-transform: none;
+}
+
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+legend {
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
+}
+
+progress {
+  vertical-align: baseline;
+}
+
+textarea {
+  overflow: auto;
+}
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
+}
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+[type="search"] {
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
+}
+
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
+}
+
+details {
+  display: block;
+}
+
+summary {
+  display: list-item;
+}
+
+template {
+  display: none;
+}
+
+[hidden] {
+  display: none;
+}
+
+/* ========================================================================================= */
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  height: 100vh;
   font-family: 'Inter Tight', sans-serif;
   display: flex;
   flex-direction: column;
 }
 
 #header {
-  font-size: 4em;
+  text-align: center;
+  font-size: 5rem;
   font-weight: bold;
+  letter-spacing: -2px;
+  padding: 32px 0;
   border-bottom: 2px solid black;
 }
 
-#header,
 #footer {
   text-align: center;
-  padding: 1rem 0;
-}
-
-#footer {
+  padding: 16px 0;
   border-top: 2px solid black;
 }
 
@@ -45,7 +223,7 @@ body {
   margin: 0 auto;
   align-self: center;
   aspect-ratio: 1 / 1;
-  width: 650px;
+  width: 590.0872px;
   border: 5px solid black;
   display: flex;
   flex-wrap: wrap;
@@ -54,8 +232,7 @@ body {
 }
 
 #menu {
-  width: 300px;
-  padding: 1em;
+  padding: 32px;
   border-right: 2px solid black;
   display: flex;
   flex-direction: column;
@@ -63,10 +240,8 @@ body {
   justify-content: space-between;
 }
 
-#colorPickerContainer,
-#buttonsContainer {
+#colorModeContainer {
   display: flex;
-  flex-direction: column;
   align-items: center;
 }
 
@@ -81,7 +256,7 @@ body {
   background-color: transparent;
   border: none;
   cursor: pointer;
-  margin-bottom: 16px;
+  margin-right: 16px;
   transition: transform 0.15s ease-in-out;
 }
 #colorPicker::-webkit-color-swatch {
@@ -101,12 +276,13 @@ body {
 /*----- Color Palette -----*/
 
 #colorPaletteContainer {
-  min-width: max-content;
-  padding: 1em;
+  width: calc(157px + 32px + 5px); /* content + padding + scrollbar */
+  padding: 16px;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(5, 25px);
+  grid-auto-rows: 25px;
   gap: 8px;
-  max-height: 158px;
+  max-height: 125px;
   overflow-y: auto;
   border-top: 1px solid rgba(0, 0, 0, 0.25);
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
@@ -134,12 +310,16 @@ body {
 
 /*----- Buttons and inputs -----*/
 
+#buttonsContainer,
+#gridSettingsContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+
 button {
-  font-size: inherit;
-  font-family: inherit;
-  font-weight: inherit;
-  min-width: 250px;
-  margin-bottom: 1rem;
+  width: 250px;
   padding: 8px 0;
   box-shadow: 0 0 2px rgb(0, 0, 0, 0.5);
   background-color: rgb(239, 239, 239);
@@ -164,6 +344,13 @@ button:hover {
   background-color: red;
 }
 
+.inputRangeContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 input[type="range"] {
   min-width: 250px;
+  min-height: 22px;
 }
