--- a/styles.css
+++ b/styles.css
@@ -321,22 +321,20 @@ body {
 button {
   width: 250px;
   padding: 8px 0;
-  box-shadow: 0 0 2px rgb(0, 0, 0, 0.5);
-  background-color: rgb(239, 239, 239);
-  border: 1px solid rgba(0, 0, 0, 0.25);
-  transition: transform 0.15s, box-shadow 0.15s, background-color 0.15s;
+  background-color: white;
+  border: 1px solid rgb(0, 0, 0);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+  transition: transform 0.15s, background-color 0.15s, box-shadow 0.15s;
 }
 button:hover {
   transform: scale(1.05);
+  background-color: rgb(239, 239, 239);
   box-shadow: none;
-  background-color: rgb(255, 255, 255);
-  border: 1px solid rgba(0, 0, 0, 0.5);
 }
 .currentMode {
   transform: scale(0.95);
-  box-shadow: none;
-  background-color: rgb(225, 225, 225);
-  border: 1px solid rgba(0, 0, 0);
+  background-color: rgb(75 75 75);
+  color: white;
   pointer-events: none;
 }
 
