--- a/styles.css
+++ b/styles.css
@@ -333,7 +333,7 @@ button:hover {
 }
 .currentMode {
   transform: scale(0.95);
-  background-color: rgb(75 75 75);
+  background-color: rgb(51, 51, 51);
   color: white;
   pointer-events: none;
 }
