--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 html {
@@ -207,8 +205,18 @@ body {
 
 #footer {
   text-align: center;
-  padding: 16px 0;
+  padding: 24px 0;
   border-top: 2px solid black;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+  transition: color 0.15s;
+}
+a:hover {
+  color:rgb(125, 125, 125);
+  text-decoration: underline;
 }
 
 #main {
@@ -223,12 +231,13 @@ body {
   margin: 0 auto;
   align-self: center;
   aspect-ratio: 1 / 1;
-  width: 590.0872px;
+  height: 649.4481px; /* 90% height relative to parent element (721.609px) */
   border: 5px solid black;
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.25);
+  cursor: crosshair;
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
-  cursor: crosshair;
 }
 
 #menu {
