--- a/styles.css
+++ b/styles.css
@@ -235,6 +235,7 @@ a:hover {
   border: 5px solid black;
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.25);
   cursor: crosshair;
+  background-color: black;
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
@@ -311,6 +312,7 @@ a:hover {
   border: 1px solid rgba(0, 0, 0, 0.25);
   box-shadow: 0 1px 3px 0px rgb(0, 0, 0, 0.25);
   transition: transform 0.1s ease-out, box-shadow 0.1s ease-out;
+  cursor: pointer;
 }
 .paletteColor:hover {
   transform: scale(1.1);
@@ -334,6 +336,7 @@ button {
   border: 1px solid rgb(0, 0, 0);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
   transition: transform 0.15s, background-color 0.15s, box-shadow 0.15s;
+  cursor: pointer;
 }
 button:hover {
   transform: scale(1.05);
@@ -357,7 +360,84 @@ button:hover {
   align-items: center;
 }
 
-input[type="range"] {
-  min-width: 250px;
-  min-height: 22px;
+/* Styling range inputs //////////////////////////////////////////////////////////////////// */
+
+input[type=range] {
+  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+  background: transparent; /* Otherwise white in Chrome */
+  width: 250px;
+  height: 6px;
+  margin: 12px 0 8px 0;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  background: hsl(0, 0%, 20%);
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  border: none;
+  box-shadow: 0 1px 3px black;
+  cursor: pointer;
+  margin-top: -6px; /* You need to specify a margin in Chrome */
+}
+
+input[type=range]::-moz-range-thumb {
+  background: hsl(0, 0%, 20%);
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  border: none;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5); /* Reduced the shadow because in Firefox it is very dark */
+  cursor: pointer;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  background: hsl(0, 0%, 90%);
+  width: 100%;
+  height: 6px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+}
+
+input[type=range]::-moz-range-track {
+  background: hsl(0, 0%, 90%);
+  width: 100%;
+  height: 6px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+}
+
+input[type=range]:hover::-webkit-slider-thumb {
+  background: hsl(0, 0%, 16%);
+}
+input[type=range]:hover::-moz-range-thumb {
+  background: hsl(0, 0%, 16%);
+}
+
+input[type=range]:hover::-webkit-slider-runnable-track {
+  background: hsl(0, 0%, 86%);
+}
+input[type=range]:hover::-moz-range-track {
+  background: hsl(0, 0%, 86%);
+}
+
+input[type=range]:focus {
+  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: hsl(0, 0%, 86%);
+}
+input[type=range]:focus::-moz-range-track {
+  background: hsl(0, 0%, 86%);
+}
+
+input[type=range]:active::-webkit-slider-thumb {
+  background: hsl(0, 0%, 30%);
+}
+input[type=range]:active::-moz-range-thumb {
+  background: hsl(0, 0%, 30%);
 }
